--- a/dev/css_dev/base/_reset.scss
+++ b/dev/css_dev/base/_reset.scss
@@ -46,3 +46,4 @@ table {
 
 a { color: inherit; text-decoration: none; }
 img { vertical-align: top; }
+button { border: none; background-color: inherit;}
