--- a/dev/css_dev/layout/_nav.scss
+++ b/dev/css_dev/layout/_nav.scss
@@ -106,19 +106,15 @@ header {
 
 /* ---------------------------------------------------------- */
 
-//mdq_pc
-header {
-  @include mdq_pc {
+// mdq pc
+@media only screen and (max-width: 768px) {
+  header {
     overflow: inherit;
-  }
-  .gnb {
-    .mo_hamburger {
-      @include mdq_pc {
+    .gnb { 
+      .mo_hamburger {
         display: block;
       }
-    }
-    .sub_menu {
-      @include mdq_pc {
+      .sub_menu {
         position: absolute;
         right: -100%;
         background-color: #fff;
@@ -128,23 +124,17 @@ header {
         text-align: right;
         padding: 70px 50px;
         transition: .5s;
-      }
-      ul.menu {
-        @include mdq_pc {
+        ul.menu {
           float: none;
-        }
-        li {
-          @include mdq_pc {
+          li {
             float: none;
             margin: 0 0 30px 0;
             &:last-child {
               margin-right: 0px;
-          }
+            }
           }
         }
-      }
-      ul.sns {
-        @include mdq_pc {
+        ul.sns {
           position: absolute;
           right: 50px;
           bottom: 30px;
@@ -153,5 +143,6 @@ header {
     }
   }
 }
+
 /* nav e ==================================================== */
 /* ---------------------------------------------------------- */
