--- a/dev/css_dev/pages/_soo.scss
+++ b/dev/css_dev/pages/_soo.scss
@@ -14,6 +14,7 @@
 
 // promotion
 .promotion {
+  color: var(--fontColor);
     .promo_tit {
         overflow: hidden;
         height: 117px;
@@ -24,9 +25,6 @@
         h1 {
             float: left;
             font-weight: $b;
-        }
-        @include mdq_pc {
-          padding: 0 30px;
         }
     }
     .promo_con {
@@ -45,15 +43,12 @@
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
-            @include mdq_pc {
-              padding: 30px;
-            }
             .download {
                 font-size: 32px;
                 font-weight: $b;
                 a {
                     span.ico {
-                        background: url(../../../assets/images/ico/ico_down.png) no-repeat center;
+                        background: url(../../assets/images/ico/ico_down.png) no-repeat center;
                         width: 51px;
                         height: 51px;
                         border-radius: 50%;
@@ -73,7 +68,7 @@
                 font-size: 24px;
                 .ico {
                     display: inline-block;
-                    background: url(../../../assets/images/ico/ico_folder.png) no-repeat center / 100%;
+                    background: url(../../assets/images/ico/ico_folder.png) no-repeat center / 100%;
                     width: 68px;
                     height: 54px;
                 }
@@ -85,14 +80,10 @@
                 }
             }
         }
-        @include mdq_pc {
-          padding: 0 20px;
-        }
     }
   }
 
   //text_heading
-
   .text_heading {
     margin-top: 96px;
     .tehead_wrap {
@@ -101,21 +92,12 @@
             float: left;
             width: 30%;
             p {
-                margin-bottom: 38px;
-            }
-            @include mdq_pc {
-              width: inherit;
-            }
-            @include mdq_tab {
-              width: 100%;
+              margin-bottom: 38px;
             }
         }
         .body_text {
-            width: 70%;
-            line-height: 150%;
-            @include mdq_pc {
-              width: inherit;
-            }
+          width: 70%;
+          line-height: 150%;
         }
     }
   }
@@ -145,19 +127,12 @@
     .btn_hover_list,
     .category_potcasts {
       margin-top: 48px;
-      overflow: hidden;
-      li {
-        float: left;
+      a {
+        display: inline-block;
         margin-right: 48px;
         &:last-child {
           margin-right: 0;
         }
-        @include mdq_tab {
-          float: none;
-        }
-      }
-      @include mdq_tab {
-        float: inherit;
       }
     }
   }
@@ -195,9 +170,6 @@
       li {
         float: left;
         margin-right: 60px;
-        @include mdq_pc {
-          margin-bottom: 30px;
-        }
       }
     }
     .sns_list {
@@ -209,12 +181,62 @@
       }
       .ico_small {
       }
-      @include mdq_pc {
+    }
+  }
+
+
+// mdq_pc
+@media only screen and (max-width: 768px) {
+  .promo_tit {
+    padding: 0 30px;
+  }
+  .promo_con {
+    padding: 0 20px;
+    .typo_box {
+      padding: 30px;
+    }
+    .text_heading {
+      .heading {
+        width: inherit;
+      }
+      .body_text {
+        width: inherit;
+      }
+    }
+    .potcasts {
+      .potcasts_list {
+        li {
+          margin-bottom: 30px;
+        }
+      }
+      .sns_list {
         width: inherit;
         height: 100%;
       }
     }
   }
+}
+// mdq_tab
+@media only screen and (max-width: 425px) {
+  .promo_con {
+    .text_heading {
+      .heading {
+        width: 100%;
+      }
+    }
+    .components {
+      .btn_com_list,
+      .btn_hover_list,
+      .category_potcasts {
+        float: inherit;
+        a {
+          float: none;
+        }
+      }
+    }
+  }
+}
+
 /* promotion e =================================================== */
 
 /* ========================================================== */
@@ -222,22 +244,7 @@
 /* ========================================================== */
 
 .recent_episodes {
-  .recent_text {
-    position: relative;
-    h2 {
-      font-size: 32px;
-    }
-    p {
-      line-height: 24px;
-      margin-top: 16px;
-    }
-    .btn_recent {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 195px;
-    }
-  }
+  color: var(--fontColor);
   .recent_video { 
     ul {
       overflow: hidden;
@@ -261,13 +268,13 @@
           }
           a.mute {
             position: absolute;
-            top: 0;
-            right: 0;
+            top: 16px;
+            right: 16px;
             color: #fff;
             i {
-              background: url(../../../assets/images/ico/ico_vactor.png) no-repeat center;
-              width: 32px;
-              height: 32px;
+              background: url(../../assets/images/ico/ico_vector.png) no-repeat center / 14px;
+              width: 40px;
+              height: 40px;
               border-radius: 50%;
               background-color: #503AE7;
               display: inline-block;
@@ -282,6 +289,21 @@
     }
   }
 
+}
+
+// mdq_pc
+@media only screen and (max-width: 768px) {
+  .recent_episodes {
+    .recent_video {
+      ul {
+        margin: 40px 0 0 0;
+        li {
+          width: 100%;
+          margin: 0 0 30px 0;
+        }
+      }
+    }
+  }
 }
 
 /* soo e =================================================== */
