--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -143,7 +143,7 @@ body {
       }
   }
   i.play {
-    background: url(../../../assets/images/ico/ico_play.png) no-repeat center;
+    background: url(../../assets/images/ico/ico_play.png) no-repeat center;
     width: 32px;
     height: 32px;
     border-radius: 50%;
@@ -197,38 +197,38 @@ body {
 
 // sns
 .facebook_b {
-  background: url(../../../assets/images/ico/ico_facebook.svg) no-repeat center;
+  background: url(../../assets/images/ico/ico_facebook.svg) no-repeat center;
   width: 24px;
   height: 24px;
   display: inline-block;
 }
 .linkedIn_b {
-  background: url(../../../assets/images/ico/ico_linkedIn.svg) no-repeat center;
+  background: url(../../assets/images/ico/ico_linkedIn.svg) no-repeat center;
   width: 24px;
   height: 24px;
   display: inline-block;
 }
 .instagram_b {
-  background: url(../../../assets/images/ico/ico_instagram.svg) no-repeat center;
+  background: url(../../assets/images/ico/ico_instagram.svg) no-repeat center;
   width: 24px;
   height: 24px;
   display: inline-block;
 }
 
 .facebook_s {
-  background: url(../../../assets/images/ico/ico_facebook.svg) no-repeat center / 100%;
+  background: url(../../assets/images/ico/ico_facebook.svg) no-repeat center / 100%;
   width: 16px;
   height: 16px;
   display: inline-block;
 }
 .linkedIn_s {
-  background: url(../../../assets/images/ico/ico_linkedIn.svg) no-repeat center / 100%;
+  background: url(../../assets/images/ico/ico_linkedIn.svg) no-repeat center / 100%;
   width: 16px;
   height: 16px;
   display: inline-block;
 }
 .instagram_s {
-  background: url(../../../assets/images/ico/ico_instagram.svg) no-repeat center / 100%;
+  background: url(../../assets/images/ico/ico_instagram.svg) no-repeat center / 100%;
   width: 16px;
   height: 16px;
   display: inline-block;
