--- a/assets/css/display_soo.css
+++ b/assets/css/display_soo.css
@@ -109,6 +109,13 @@
 @media only screen and (max-width: 768px) { .recent_episodes .recent_video ul { margin: 40px 0 0 0; }
   .recent_episodes .recent_video ul li { width: 100%; margin: 0 0 30px 0; } }
 
+/* recent episode e ========================================= */
+/* ========================================================== */
+/* host s                                                     */
+/* ========================================================== */
+.host_top { max-width: 1069px; margin: 0 auto; }
+
+/* host e =================================================== */
 /* soo e =================================================== */
 /* ---------------------------------------------------------- */
 
