--- a/dev/css_dev/layout/_footer.scss
+++ b/dev/css_dev/layout/_footer.scss
@@ -80,6 +80,7 @@
 
   .footer_sponsors {
     padding: 42px 42px !important;
+    margin: inherit;
     transform: inherit;
     .logoipsum {
       margin-top: 34px;
