--- a/dev/css_dev/pages/_soo.scss
+++ b/dev/css_dev/pages/_soo.scss
@@ -306,5 +306,21 @@
   }
 }
 
+/* recent episode e ========================================= */
+
+/* ========================================================== */
+/* host s                                                     */
+/* ========================================================== */
+
+.host_top {
+  max-width: 1069px;
+  margin: 0 auto;
+  .host_vector {
+  }
+}
+
+
+/* host e =================================================== */
+
 /* soo e =================================================== */
 /* ---------------------------------------------------------- */
