--- a/assets/css/display_kim.css
+++ b/assets/css/display_kim.css
@@ -18,15 +18,15 @@
 
 .home_wrap .custom_swiper .custom_wrap { display: flex; justify-content: space-around; }
 
-.home_wrap .custom_swiper .custom_wrap .custom_item { width: 500px; }
+.home_wrap .custom_swiper .custom_wrap .custom_item { width: calc((100% - 36px ) / 3); }
 
-.home_wrap .custom_swiper .custom_wrap .custom_item::after { content: ''; display: block; height: 12px; background: #503AE7; margin-top: 30px; }
+.home_wrap .custom_swiper .custom_wrap .custom_item::after { content: ''; display: block; width: 100%; height: 12px; margin-top: 12px; background: #503AE7; }
 
 .home_wrap .custom_swiper .custom_wrap .my_review { display: flex; align-items: center; margin-bottom: 16px; }
 
 .home_wrap .custom_swiper .custom_wrap .my_review > p { width: 116px; height: 44px; margin-left: 15px; text-indent: 3px; font-weight: 500; color: var(--fontColor); background: url(../../assets/images/ico/stars.png) no-repeat center bottom; }
 
-.home_wrap .custom_swiper .custom_wrap .review_con { line-height: 24px; color: var(--fontColor); }
+.home_wrap .custom_swiper .custom_wrap .review_con { line-height: 24px; color: var(--fontColor); min-height: 65%; }
 
 /* //home_wrap */
 /* email_input */
@@ -69,7 +69,7 @@
 
 .sec_wrap .sec2 { justify-content: flex-start; background: url(../../assets/images/lines/bg_lines_4.png) no-repeat 70% 15%; position: relative; }
 
-.sec_wrap .sec2 .sec_txt { width: 33%; order: 2; padding-left: 225px; }
+.sec_wrap .sec2 .sec_txt { width: 47%; order: 2; padding-left: 183px; }
 
 .sec_wrap .sec2 .sec_txt p.heading_2 { width: 71%; }
 
@@ -82,8 +82,7 @@
 .sec_wrap .sec2 .bnt_video:hover { background-color: #3E2DB2; transition: .5s; }
 
 /* tablet 지정 */
-@media only screen and (max-width: 768px) { .home_wrap { padding: 0 20px; }
-  .home_wrap .main_top { width: 100%; background-size: 50%; background-position: 95% center; }
+@media only screen and (max-width: 768px) { .home_wrap .main_top { width: 100%; background-size: 50%; background-position: 95% center; }
   .home_wrap .main_top .main_tit { width: 314px; margin-top: 92px; }
   .home_wrap .main_top .main_tit p { margin-top: 20px; }
   .home_wrap .main_top .main_tit p:first-child { font-size: 28px; line-height: 35px; }
@@ -92,7 +91,7 @@
   .home_wrap .custom_swiper .custom_wrap .custom_item { width: 100%; margin-bottom: 30px; }
   .home_wrap .custom_swiper .custom_wrap .my_review { display: flex; align-items: center; margin-bottom: 16px; }
   .home_wrap .custom_swiper .custom_wrap .my_review > p { width: 116px; height: 44px; margin-left: 15px; text-indent: 3px; }
-  .home_wrap .custom_swiper .custom_wrap .review_con { line-height: 24px; color: var(--fontColor); }
+  .home_wrap .custom_swiper .custom_wrap .review_con { color: var(--fontColor); }
   /* // home_wrap*/
   /* email_input */
   .email_send { width: 340px; }
