--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -39,6 +39,10 @@ body {
 .con_pd {
   padding: 0 80px;
 }
+// margin
+.con-m{
+  margin-top: $margin-t;
+}
 
 //text_heading - heading List
 .heading_1 {
@@ -65,11 +69,6 @@ body {
   font-size: 12px;
   font-weight: $r;
   margin-bottom: 0;
-}
-
-// margin
-.con-m{
-  margin-top: $margin-t;
 }
 
 // color_palette - color List
@@ -258,11 +257,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 310px;
+  padding: 90px 0;
   margin: 128px 80px 0 80px;
   text-align: center;
   color: #fff;
   background-color: $prime_color;
+  z-index: 1;
   &::after{
     content: '';
     display: block;
@@ -273,6 +273,7 @@ body {
     left: 0;
     top: 0;
     opacity: 0.1;
+    z-index: -1;
   }
   .email_send{
     margin: 32px auto 0 auto;
@@ -303,27 +304,41 @@ body {
 /* layout_list */
 .item_list_wrap{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   & > li{
-    display: flex;
-    align-items: flex-end;
-    & > a{
+    width: calc((100% - 26px ) / 3);
+    .item{
       display: block;
-    }
-    &:first-child{
-      width: 416px;
-      height: 516px;
-      background: url(../../assets/images/contents/bg_con_1.png) no-repeat;
-      & > a{
-        text-indent: -999px;
-        font-size: 0;
+      & > img{
+        width: 100%;
+      }
+      & > div{
+        color: var(--fontColor);
+      }
+      .heading_3{
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        line-height: 30px;
+        margin-top: 16px;
+      }
+      .heading_5{
+        line-height: 24px;
+        margin-top: 16px;
+      }
+      .btn_listen{
+        margin-top:16px;
       }
     }
-    &:nth-child(2){
-      background: url(../../assets/images/contents/articles_1.png) no-repeat;
-    }
-    &:nth-child(3){
-      background: url(../../assets/images/contents/articles_2.png) no-repeat;
+    &:first-child{
+      & > a{
+        width: 100%;
+        height: 100%;
+        & > img{
+          height: 100%;
+        }
+      }
     }
   }
 }
@@ -373,11 +388,30 @@ body {
 
   /* your_inbox */
   .inbox_wrap{
-    margin: 80px 0;
+    margin: 80px 0 0 0;
     .email_send{
       margin: 32px auto 0 auto;
       &::before{
         left: 0;
+      }
+    }
+  }
+
+   /* layout_list */
+  .item_list_wrap{
+    & > li{
+      .item{
+        .heading_3{
+          line-height: 20px;
+          margin-top: 5px;
+        }
+        .heading_5{
+          line-height: 20px;
+          margin-top: 5px;
+        }
+        .btn_listen{
+          margin-top: 5px;
+        }
       }
     }
   }
@@ -395,10 +429,7 @@ body {
   /* your_inbox */
   .inbox_wrap{
     background-image: none;
-    background-color: $prime_color;
-    width: 100%;
-    height: 130px;
-    margin-bottom: 60px;
+    padding: 40px 0;
     .heading_2{
       font-size: $font-16r;
     }
@@ -408,6 +439,15 @@ body {
       &::after{
         display: none;
       }
+    }
+  }
+
+  /* layout_list */
+  .item_list_wrap{
+    display: block;
+    & > li{
+      width: 100%;
+      margin-bottom: 26px;
     }
   }
 
