--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -32,13 +32,14 @@
       display: flex;
       justify-content: space-around;
       .custom_item{
-        width: 500px;
+        width: calc((100% - 36px ) / 3);
         &::after{
           content: '';
           display: block;
+          width: 100%;
           height: 12px;
+          margin-top: 12px;
           background: $prime_color;
-          margin-top: 30px;
         }
       }
       .my_review{
@@ -58,6 +59,7 @@
       .review_con{
         line-height: 24px;
         color: var(--fontColor);
+        min-height: 65%;
       }
     }
   }
@@ -156,9 +158,9 @@
     background: url(../../assets/images/lines/bg_lines_4.png) no-repeat 70% 15%;
     position: relative;
     .sec_txt{
-      width: 33%;
+      width: 47%;
       order: 2;
-      padding-left: 225px;
+      padding-left: 183px;
       p{
         &.heading_2{
           width: 71%;
@@ -196,7 +198,6 @@
 /* tablet 지정 */
 @media only screen and (max-width: 768px) {
   .home_wrap{
-    padding: 0 20px;
     .main_top{
       width: 100%;
       background-size: 50%;
@@ -236,7 +237,6 @@
           }
         }
         .review_con{
-          line-height: 24px;
           color: var(--fontColor);
         }
       }
